log-aggregator/manifests/parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parser
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
      - name: parser
        image: logaggregatoracr.azurecr.us/parser:v1
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: parser
spec:
  selector:
    app: parser
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
