log-aggregator/manifests/search-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-api
  template:
    metadata:
      labels:
        app: search-api
    spec:
      containers:
      - name: search-api
        image: logaggregatoracr.azurecr.us/search-api:v1
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: search-api
spec:
  selector:
    app: search-api
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
